# substack

backend/: .envrc  db.sqlite3  manage.py  pyproject.toml
backend/substack_backend/: asgi.py  ejemplo.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  App.tsx  index.css
frontend/substack_frontend/: package-lock.json  package.json
frontend/substack_frontend/src/: App.js
